Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-34585

Replica does not handleSnapshotEnd on abort or commit

    XMLWordPrintable

Details

    Description

      We do not call PassiveStream::handleSnapshotEnd for aborts or commits so if the last message we receive in a snapshot is an abort or commit then we will not ack any other prepares in that snapshot. If this is the last message that the replica receives then we can abort a SyncWrite that we do not need to.

      [ - snap start
      ] - snap end
      [1:PRE - k1][2:PRE - k2, 3:CMT - k1]
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ben.huddleston Ben Huddleston
            ben.huddleston Ben Huddleston
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes

                PagerDuty