MB-34585: Handle snap end at abort and commit

Currently we do not call PassiveStream::handleSnapshotEnd at abort
and commit. This leads to us incorrectly not resetting the
receivingInitialDiskSnapshot/backfillingPhase flag in VBucket and
not acking for any prepares in the snapshot if the abort or commit
is the last item received.

Change-Id: I4a2098f9fa0646e1232c75dd4e1a9aff50875b95
Reviewed-on: http://review.couchbase.org/110651
Reviewed-by: Jim Walker <jim@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>