engines/ep/tests/mock/mock_stream.h
@@ -298,5 +298,9 @@ public:
         return createStreamReqValue();
     }
 
+    bool getCurSnapshotPrepare() const {
+        return cur_snapshot_prepare.load(std::memory_order_relaxed);
+    }
+
     uint32_t responseMessageSize;
 };
