engines/ep/tests/module_tests/dcp_durability_stream_test.h
@@ -84,6 +84,8 @@ protected:
     void testReceiveDuplicateDcpAbort(const std::string& key,
                                       uint64_t prepareSeqno,
                                       ENGINE_ERROR_CODE expectedResult);
+
+    void setUpHandleSnapshotEndTest();
 };
 
 /**
